[metadata]
name = GDBFuzz
version = 1.0.0
description = Debugger-driven Coverage-guided Embeded Fuzzing
author = Max Eisele, Daniel Ebert

[options]
setup_requires = wheel
packages = find:
package_dir = =src
install_requires =
	pygdbmi==0.10.0.1
	ghidra-bridge==0.2.5
	networkx==2.6.3
	paho-mqtt==1.6.1
	attrs==21.2.0
	seaborn==0.11.2
	pandas==1.3.4
	matplotlib==3.5.1
	pyelftools==0.27
	pyserial==3.5
	pyusb==1.2.1
python_requires = >=3.8.0

[options.packages.find]
where = src
exclude =
	tests*

[options.entry_points]
console_scripts =
	GDBFuzz = GDBFuzz.main:main

[mypy]
exclude = src/GDBFuzz/connections/TCPConnection.py
mypy_path = $MYPY_CONFIG_FILE_DIR/src/stubs
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[coverage:run]
plugins = covdefaults
parallel = true

[flake8]
ignore = TYP001, W504
